--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.21.1",
-    "dotenv": "^17.2.3",
-    "node-fetch": "^3.3.2"
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
+    "@supabase/supabase-js": "^2.39.3",
+    "dotenv": "^16.4.5"
   }
 }
